<resources>
    <string name="app_name">finalexam</string>
    <string name="credits">Credits</string>
    <string name="description">description</string>
    <string name="subject_code">subject_code</string>
    <string name="id">Id</string>
    <string name="subject_name">subject_name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="subject_codes">Subject_code:</string>
    <string name="product_name">product_name:</string>
    <string name="price">price:</string>
    <string name="name">Name:</string>
    <string name="item_maker">Item Maker</string>
    <string name="item_description">Item Description</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="item_id">Item Id</string>
    <string name="item_number">Item Number</string>
    <string name="add_item">Add Item</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="member_login">Member Login</string>
</resources>
