<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"

    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:padding="20dp"
        android:background="@drawable/custom_shape"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_height="100dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member_login"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="30sp"/>
        <EditText
            android:hint="@string/user_name"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>

        <com.google.android.gms.common.SignInButton
            android:layout_gravity="center"
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>